menü javítás, szinezés

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,9 @@
  *= require_self
  
  */
-
+.container{
+  background-color: #fff;
+}
  .digg_pagination {
     background: black;
     cursor: default;
