--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/7abb47e8ad.js" crossorigin="anonymous"></script>
   </head>
 
-  <body class="pt-4">
+  <body class="pt-4 text-light bg-secondary">
   <br>
 <div id="flash">
   <% if notice.present? %>
