--- a/app/views/blogs/_form.html.slim
+++ b/app/views/blogs/_form.html.slim
@@ -1,16 +1,18 @@
-= form_for @blog do |f|
-  - if @blog.errors.any?
-    #error_explanation
-      h2 = "#{pluralize(@blog.errors.count, "error")} prohibited this blog from being saved:"
-      ul
-        - @blog.errors.full_messages.each do |message|
-          li = message
+.container.border
+  = form_for @blog do |f|
+    - if @blog.errors.any?
+      #error_explanation
+        h2 = "#{pluralize(@blog.errors.count, "error")} prohibited this blog from being saved:"
+        ul
+          - @blog.errors.full_messages.each do |message|
+            li = message
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :description
-    = f.text_area :description
-    = f.date_field :date
-  .actions = f.submit
+    .field.col-12
+      = f.label :name
+      = f.text_field :name, class: "form-control "
+    .field.col-12
+      = f.label :description
+      = f.text_area :description, rows: 10, class: "form-control"
+    .field.col-12
+      = f.date_field :date
+    .actions = f.submit
