--- a/app/views/todos/index.html.slim
+++ b/app/views/todos/index.html.slim
@@ -4,7 +4,7 @@ hr
 .row.justify-content-center.container-md
   .col-md-6
     .card-hover-shadow-2x.mb-3.card
-      .card-header-tab.card-header
+      .card-header-tab.card-header.bg-dark
         .card-header-title.font-size-lg.text-capitalize.font-weight-normal
           i.fa.fa-tasks
           | \&nbsp; Teendők listája
@@ -61,5 +61,5 @@ hr
 
                               = button_to todo_path(todo), data: { confirm: 'Biztos vagy benne hogy törlöd??' }, class: "border-0 btn-transition btn btn-outline-danger", method: :delete do 
                                 i.fa.fa-trash  
-      .d-block.text-right.card-footer
-        = link_to 'Új Todo', new_todo_path, class: "btn btn-success text-light" 
+      .d-block.text-right.card-footer.bg-secondary.text-light
+        = link_to 'Új teendő', new_todo_path, class: "btn btn-success text-light" 
