--- a/app/views/todos/index.html.slim
+++ b/app/views/todos/index.html.slim
@@ -62,4 +62,6 @@ hr
                               = button_to todo_path(todo), data: { confirm: 'Biztos vagy benne hogy törlöd??' }, class: "border-0 btn-transition btn btn-outline-danger", method: :delete do 
                                 i.fa.fa-trash  
       .d-block.text-right.card-footer.bg-secondary.text-light
-        = link_to 'Új teendő', new_todo_path, class: "btn btn-success text-light" 
+        = link_to new_todo_path, class: "btn btn-success text-light" do 
+          i class="fas fa-plus-square"  Új teendők
+        
