Comment Edit Finish 1.1

--- a/app/views/comments/show.html.slim
+++ b/app/views/comments/show.html.slim
@@ -23,10 +23,10 @@ h1 Komment:
                     -if @comment.idea.scan(/(?=#{'http://'})/).count >1
                         = link_to "Autó_Össz_Link", x, class:"btn btn-danger mb-2 text-light", target: "_blank"
                         hr style="background-color: white; height: 1px; border: 0;"
-                p = simple_format(@comment.idea).gsub(URI.regexp, '<a href="\0" target="_blank" style="max-width:320px;" class="btn btn-block  btn-success text-light mb-2">\8</a>').gsub(">m=forditas&amp;s=",">").html_safe
+                p = simple_format(@comment.idea).gsub(URI.regexp, '<a href="\0" target="_blank" class="btn btn-block  btn-outline-secondary  text-light mb-2">\8</a>').gsub(">m=forditas&amp;s=",">").html_safe
 
 
 br
 = link_to "Módosítás", edit_comment_path(@comment), class: "btn btn-success"
-= link_to "Vissza", images_path(:done => "1"), class: "btn btn-success text-light m-2"
+= link_to "Vissza", images_path(:done => "0"), class: "btn btn-success text-light m-2"
 
