--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -78,7 +78,7 @@ table.table.table-dark
                                     -if com.idea.scan(/(?=#{'http://'})/).count >1
                                         = link_to "Autó_Össz_Link", x, class:"btn btn-danger mb-2 text-light", target: "_blank"
                                         hr style="background-color: white; height: 1px; border: 0;"
-                                p = simple_format(com.idea).gsub(URI.regexp, '<a href="\0" target="_blank" class="btn btn-block btn-outline-secondary text-light mb-2">\8</a>').gsub(">m=xml_data&amp;kereses=",">").gsub(">m=forditas&amp;s=",">").gsub("&amp;v=1","").html_safe
+                                p = simple_format(com.idea).gsub(URI.regexp, '<a href="\0" target="_blank" class="btn btn-block btn-outline-secondary text-light mb-2">\8</a>').gsub(">m=xml_data&amp;kereses=",">").gsub(">m=forditas&amp;s=",">").gsub("&amp;v=1<","<").html_safe
                                 
                                     
                             .c-f
