--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -32,14 +32,12 @@
                 <li class="nav-item <%= (url_for(only_path: true)) == "/todos" ? "active" : "" %> ">
                   <%= link_to "TODO", todos_path, class: "nav-link"  %>
                 </li>
+                <li class="nav-item <%= (url_for(only_path: true)) == "/uploads" ? "active" : "" %> ">
+                  <%= link_to "Uploads", uploads_path, class: "nav-link"  %>
+                </li>
                 <li class="nav-item <%= (url_for(only_path: true)) == "/comments" ? "active" : "" %> ">
                   <%= link_to "Comments", comments_path, class: "nav-link"  %>
                 </li>
-                 <li class="nav-item <%= (url_for(only_path: true)) == "/translates" ? "active" : "" %> ">
-                  <%= link_to "Translates", translates_path, class: "nav-link"  %>
-                </li>
-                
-               
                 <li class="nav-item">
                     <%= link_to "Kilépés", "/logout", class: "nav-link" %>
                 </li>
