--- a/app/views/uploads/index.html.slim
+++ b/app/views/uploads/index.html.slim
@@ -20,16 +20,8 @@ table class="table table-dark"
         td = upload.version
         td = User.find(upload.user_id).username
         td  
-          table
-
           -upload.uploads.includes(:blob).references(:blob).order('active_storage_blobs.filename ASC').each_with_index do |thing,index|
-            = link_to thing.filename, rails_blob_path(thing, disposition: "attachment"), class: "btn btn-secondary mb-1 text-light", style: "width:150px"
-            - if (index+1)>0 && (index+1) % 10  == 0
-           
-            
-          
-
-
+            = link_to thing.filename, rails_blob_path(thing, disposition: "attachment"), class: "btn btn-primary m-1 text-light", style: "width:150px"
         td
           = link_to 'Show', upload, class: "btn btn-primary mb-1 btn-block text-light"
           = link_to 'Edit', edit_upload_path(upload), class: "btn btn-primary btn-block mb-1 text-light"
