--- a/app/views/uploads/index.html.slim
+++ b/app/views/uploads/index.html.slim
@@ -22,6 +22,7 @@ table class="table table-dark"
         td  
           -upload.uploads.includes(:blob).references(:blob).order('active_storage_blobs.filename ASC').each_with_index do |thing,index|
             = link_to thing.filename, rails_blob_path(thing, disposition: "attachment"), class: "btn btn-primary m-1 text-light", style: "width:150px"
+            = link_to thing.filename, proc_path(did: thing,id: upload.id), class: "btn btn-success"
         td
           = link_to 'Show', upload, class: "btn btn-primary mb-1 btn-block text-light"
           = link_to 'Edit', edit_upload_path(upload), class: "btn btn-primary btn-block mb-1 text-light"
