--- a/app/views/translater/index.html.slim
+++ b/app/views/translater/index.html.slim
@@ -1,6 +1,12 @@
 h1 Translater#index Last 200 record
+hr
+| Össz adatábzis rekord: 
+=@translate_all
+hr
+| Össz translatere váró:
+=@translate_real_all
 
-table
+table class="table table-dark"
     -@translater.each do |trans|
         tr
             td = trans.file_id
