--- a/app/views/translater/index.html.slim
+++ b/app/views/translater/index.html.slim
@@ -7,14 +7,24 @@ hr
 =@translate_real_all
 
 table class="table table-dark"
+    tr 
+        th FileName_ID
+        th Original_ID
+        th Original_Text
+        th Translate_Text
+
     -@translater.each do |trans|
-        tr
-            td = trans.file_id
-            td 
-                =trans.trans_id
-            td 
-                = trans.original
-    
+        - if trans.original.to_s.length > 0 
+            tr
+                td
+                    -upload = Upload.find(6)
+                    =upload.uploads.find(trans.file_id).filename
+                td 
+                    =trans.trans_id
+                td 
+                    = trans.original
+                td 
+                    = trans.translate
           
           
 
