--- a/app/views/images/index.html.slim
+++ b/app/views/images/index.html.slim
@@ -22,7 +22,7 @@ div
         
 .row
     .col-1
-        | Kész:
+        | Kész: 
         = @images_info_true
     .col-1
         |Várakozik: 
@@ -50,7 +50,12 @@ table.table.table-dark
                 a.color-gray-darker.td-hover-none data-target="#modalIMG_#{image.id}" data-toggle="modal" href="#"
 				    .ba-0.tp-s
                         = image_tag image.image.variant(resize_to_limit: [300, 300]).processed, class: "" if image.image.present?
-					    
+				.bg-dark
+                    |Updated: 
+                    =image.updated_at	    
+                .bg-dark
+                    |Created: 
+                    =image.created_at	    
 				
             td id="comment_#{image.id}" 
                 .card-body
