--- a/app/views/translater/index.html.slim
+++ b/app/views/translater/index.html.slim
@@ -1,4 +1,5 @@
 h1 Translater#index Last 200 record
+= link_to 'Töröld', torol_path, class: "btn btn-primary text-light", method: :post
 hr
 | Össz adatábzis rekord: 
 =@translate_all
