--- a/app/views/uploads/_form.html.slim
+++ b/app/views/uploads/_form.html.slim
@@ -13,6 +13,9 @@
     = f.label :name
     = f.text_field :name
   .field
+    = f.label :project_id
+    = f.number_field :project_id
+  .field
     = f.label :description
     = f.text_field :description
   .field
