--- a/app/views/projects/index.html.slim
+++ b/app/views/projects/index.html.slim
@@ -1,10 +1,11 @@
-h1 Listing projects
+h1 A rendszerben lévő projektek!
 
-table
+table.table.table-dark
   thead
     tr
       th Title
       th Descripion
+      th File
       th
       th
       th
@@ -14,10 +15,13 @@ table
       tr
         td = project.title
         td = project.descripion
-        td = link_to 'Show', project
-        td = link_to 'Edit', edit_project_path(project)
-        td = link_to 'Destroy', project, data: { confirm: 'Are you sure?' }, method: :delete
+        td = project.uploads.size
+        td 
+          = link_to 'Show', project, class: "btn btn-success text-light"
+          = link_to 'Edit', edit_project_path(project), class: "btn btn-primary text-light"
+          = link_to 'Destroy', project, data: { confirm: 'Are you sure?' }, method: :delete, class: "btn btn-warning text-light"
+
 
 br
 
-= link_to 'New Project', new_project_path
+= link_to 'New Project', new_project_path, class: "btn btn-success text-light"
