--- a/app/views/uploads/_form.html.slim
+++ b/app/views/uploads/_form.html.slim
@@ -14,7 +14,7 @@
     = f.text_field :name
   .field
     = f.label :project_id
-    = f.number_field :project_id
+    = f.select("project_id",  Project.all.collect {|p| [ p.title, p.id ] }, {:include_blank => 'Válassz projectet'})
   .field
     = f.label :description
     = f.text_field :description
