--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>GTA V Site 2021 By Sediqwe</title>
+    <meta charset="utf-8">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -26,7 +27,7 @@
  
   <% end %>
   <%= render 'shared/menu' %>
-   <div class="container-fluid">
+   <div class="container-flex">
   <%= yield %>
 
     </div>
