--- a/app/views/translater/index.html.slim
+++ b/app/views/translater/index.html.slim
@@ -7,7 +7,7 @@ hr
 br
 br
 .digg_pagination
-    
+   = will_paginate @translater, :container => false  
 table class="table table-hover table-dark"
     tr 
         
@@ -17,7 +17,7 @@ table class="table table-hover table-dark"
         th style="width:700px" Duplicated
 
     -@translater.each do |trans|
-        tr id="tr_#{trans.id}"
+        tr id="tr_#{trans.trans_id}"
               
             td 
                 .col.mx-3
@@ -34,28 +34,28 @@ table class="table table-hover table-dark"
             td 
                 .input-group.mb-3
                     .input-group-prepend
-                        button class="btn btn-danger text-light" id="status_4" title="Nem fordítandó" name="#{trans.id}"
+                        button class="btn btn-danger text-light" id="status_4" data-toggle="tooltip" data-placement="top"  title="Nem fordítandó" name="#{trans.id}"
                             i class="fas fa-ban" aria-hidden="true"
                         span class="input-group-text basic-addon1 bg-secondary text-light" style="width:100px" 
                             |Angol:
                             br 
                             |Státusz: #{trans.status}
                         
-                    textarea rows="2" class="form-control" id="old_#{trans.id}" disabled=""
+                    textarea rows="2" class="form-control" id="old_#{trans.trans_id.strip}" disabled=""
                         = trans.original
-                    button id="copy_original" class="btn btn-outline-light" name="#{trans.id}" title="Eredeti szöveget 1:1 ben átmásolja" 
+                    button id="copy_original" class="btn btn-outline-light" name="#{trans.trans_id.strip}" data-toggle="tooltip" data-placement="top" title="Eredeti szöveget 1:1 ben átmásolja"
                         i class="far fa-copy" aria-hidden="true"
-                    button id="only" class="btn btn-outline-light" name="#{trans.id}" title="Csak a vezérlőket másolja át"
+                    button id="only" class="btn btn-outline-light" name="#{trans.trans_id.strip}" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
                         i class="fas fa-font" aria-hidden="true"
                 .input-group.mb-3
                     .input-group-prepend
                         span class="input-group-text basic-addon1 bg-success text-light" style="width:100px" Fordítás:
-                    textarea rows="2" class="form-control" id="new_#{trans.id}"
+                    textarea rows="2" class="form-control" id="new_#{trans.trans_id.strip}"
                         
                 
                 
                 
-                .btn.btn-success id="SAVE_#{trans.id}"
+                .btn.btn-success id="SAVE_#{trans.trans_id.strip}" data-toggle="tooltip" data-placement="top"  title="Mentés"
                     i class="fas fa-hand-paper" aria-hidden="true"
                     |  Mentés                
                
@@ -67,19 +67,19 @@ table class="table table-hover table-dark"
                         -t.each do |b|
                             .input-group.mb-3
                                 .input-group-prepend
-                                    button class="btn btn-danger text-light" id="status_4" title="Nem fordítandó" name="#{b.id}"
+                                    button class="btn btn-danger text-light" id="status_4" data-toggle="tooltip" data-placement="top"  title="Nem fordítandó" name="#{b.id}"
                                         i class="fas fa-ban" aria-hidden="true"
                                     span class="input-group-text basic-addon1 bg-secondary text-light" style="width:100px" 
                                         =User.find(b.users_id).username.capitalize  
                                         br Státusz: #{b.status}
                                         
-                                textarea rows="2" class="form-control" id="trans_#{b.id}" disabled=""
+                                textarea rows="2" class="form-control" id="trans_#{b.trans_id.strip}"
                                     = b.translate
-                                button id="copy_translate" class="btn btn-outline-light" name="#{b.id}" title="A szöveget 1:1 ben átmásolja" 
+                                button id="copy_translate" class="btn btn-outline-light" data-toggle="tooltip" data-placement="top"  name="#{b.trans_id.strip}" title="A szöveget 1:1 ben átmásolja" 
                                     i class="far fa-copy" aria-hidden="true"
                                                    
                                 -if b.status = 0
-                                    button id="ok" class="btn btn-success" name="#{b.id}" title="Elfogadás" 
+                                    button id="ok" class="btn btn-success" name="#{b.id}" data-toggle="tooltip" data-placement="top"  title="Elfogadás" 
                                         i class="fas fa-spell-check" aria-hidden="true"
                                     
             td
