--- a/app/views/translater/index.html.slim
+++ b/app/views/translater/index.html.slim
@@ -8,7 +8,7 @@ br
 br
 .digg_pagination
    = will_paginate @translater, :container => false  
-table class="table table-hover table-dark"
+table class="table table-striped table-dark"
     tr 
         
         th style="width:100px" Original_ID
@@ -36,7 +36,7 @@ table class="table table-hover table-dark"
                     .input-group-prepend
                         button class="btn btn-danger text-light" id="status_4" data-toggle="tooltip" data-placement="top"  title="Nem fordítandó" name="#{trans.id}"
                             i class="fas fa-ban" aria-hidden="true"
-                        span class="input-group-text basic-addon1 bg-secondary text-light" style="width:100px" 
+                        span class="input-group-text basic-addon1 #{ status(trans.status) } text-light" id="#{trans.id}" style="width:100px" 
                             |Angol:
                             br 
                             |Státusz: #{trans.status}
@@ -47,17 +47,25 @@ table class="table table-hover table-dark"
                         i class="far fa-copy" aria-hidden="true"
                     button id="only" class="btn btn-outline-light" name="#{trans.trans_id.strip}" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
                         i class="fas fa-font" aria-hidden="true"
-                .input-group.mb-3
-                    .input-group-prepend
-                        span class="input-group-text basic-addon1 bg-success text-light" style="width:100px" Fordítás:
-                    textarea rows="2" class="form-control" id="new_#{trans.trans_id.strip}"
-                        
                 
-                
-                
-                .btn.btn-success id="SAVE_#{trans.trans_id.strip}" data-toggle="tooltip" data-placement="top"  title="Mentés"
-                    i class="fas fa-hand-paper" aria-hidden="true"
-                    |  Mentés                
+                - if !trans_controll(trans.trans_id).present?
+                    .input-group
+                        .input-group-prepend
+                            span class="input-group-text basic-addon1 bg-success text-light" style="width:100px" Fordítás:
+                        .row
+                            .col-12
+                                textarea rows="2" cols="60" class="form-control" id="new_#{trans.trans_id.strip}"
+                                button id="SAVE_#{trans.trans_id.strip}" class=" mr-2 btn btn-outline-success" name="#{trans.trans_id.strip}" data-toggle="tooltip" data-placement="top"  title="Mentés"
+                                    |  Mentés 
+                                button id="vez" class="btn btn-secondary mr-2" name="#{trans.trans_id.strip}" data-adat="s" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
+                                    | ~S~
+                                button id="vez" class="btn btn-danger mr-2" name="#{trans.trans_id.strip}" data-adat="r" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
+                                    | ~R~
+                                button id="vez" class="btn btn-warning mr-2" name="#{trans.trans_id.strip}" data-adat="y" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
+                                    | ~Y~
+                                button id="vez" class="btn btn-success" name="#{trans.trans_id.strip}" data-adat="g" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
+                                    | ~G~
+                                
                
             td
                 
@@ -69,7 +77,7 @@ table class="table table-hover table-dark"
                                 .input-group-prepend
                                     button class="btn btn-danger text-light" id="status_4" data-toggle="tooltip" data-placement="top"  title="Nem fordítandó" name="#{b.id}"
                                         i class="fas fa-ban" aria-hidden="true"
-                                    span class="input-group-text basic-addon1 bg-secondary text-light" style="width:100px" 
+                                    span class="input-group-text basic-addon1 #{ status(b.status) } text-light" id="#{b.id}" style="width:100px" 
                                         =User.find(b.users_id).username.capitalize  
                                         br Státusz: #{b.status}
                                         
@@ -79,7 +87,7 @@ table class="table table-hover table-dark"
                                     i class="far fa-copy" aria-hidden="true"
                                                    
                                 -if b.status = 0
-                                    button id="ok" class="btn btn-success" name="#{b.id}" data-toggle="tooltip" data-placement="top"  title="Elfogadás" 
+                                    button id="ok" class="btn btn-success" name="#{b.id}" data-toggle="tooltip" data-placement="top" data-adat="#{b.trans_id}"  title="Elfogadás" 
                                         i class="fas fa-spell-check" aria-hidden="true"
                                     
             td
