--- a/app/views/uploads/index.html.slim
+++ b/app/views/uploads/index.html.slim
@@ -25,7 +25,10 @@ table class="table table-dark"
             = link_to thing.filename, rails_blob_path(thing, disposition: "attachment"), class: "btn btn-primary m-1 text-light", style: "width:150px"
             - if current_user.admin == true && current_user.username == 'sediqwe'
               - if upload.done != true
-                = link_to thing.filename, proc_path(did: thing,id: upload.id), class: "btn btn-success text-light"
+                -if thing.filename.to_s.include? ".csv"
+                  = link_to thing.filename, proc_csv_path(did: thing,id: upload.id), class: "btn btn-success text-light"
+                -else
+                  = link_to thing.filename, proc_path(did: thing,id: upload.id), class: "btn btn-secondary text-light"
               - else
                 = link_to "RESET", file_reset_path(id: upload.id), class: "btn btn-primary text-light", method: :post
         td
