CSV támogatás alapok 1.1

--- a/app/views/translater/index.html.slim
+++ b/app/views/translater/index.html.slim
@@ -54,16 +54,16 @@ table class="table table-striped table-dark"
                             span class="input-group-text basic-addon1 bg-success text-light" style="width:100px" Fordítás:
                         .row
                             .col-12
-                                textarea rows="2" cols="60" class="form-control" id="new_#{trans.trans_id.strip}"
-                                button id="SAVE_#{trans.trans_id.strip}" class=" mr-2 btn btn-outline-success" name="#{trans.trans_id.strip}" data-toggle="tooltip" data-placement="top"  title="Mentés"
+                                textarea rows="2" cols="60" class="form-control" id="new_#{trans.id}"
+                                button id="SAVE_#{trans.id}" class=" mr-2 btn btn-outline-success" name="#{trans.id}" data-toggle="tooltip" data-placement="top"  title="Mentés"
                                     |  Mentés 
-                                button id="vez" class="btn btn-secondary mr-2" name="#{trans.trans_id.strip}" data-adat="s" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
+                                button id="vez" class="btn btn-secondary mr-2" name="#{trans.id}" data-adat="s" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
                                     | ~S~
-                                button id="vez" class="btn btn-danger mr-2" name="#{trans.trans_id.strip}" data-adat="r" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
+                                button id="vez" class="btn btn-danger mr-2" name="#{trans.id}" data-adat="r" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
                                     | ~R~
-                                button id="vez" class="btn btn-warning mr-2" name="#{trans.trans_id.strip}" data-adat="y" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
+                                button id="vez" class="btn btn-warning mr-2" name="#{trans.id}" data-adat="y" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
                                     | ~Y~
-                                button id="vez" class="btn btn-success" name="#{trans.trans_id.strip}" data-adat="g" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
+                                button id="vez" class="btn btn-success" name="#{trans.id}" data-adat="g" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
                                     | ~G~
                                 
                
