CSV támogatás mentésre

--- a/app/views/save/index.html.slim
+++ b/app/views/save/index.html.slim
@@ -1,3 +1,4 @@
 h1 Save#index
 p Find me in app/views/save/index.html.slim
-= link_to "Adatbázis generálás + ZIP készítés >>", save_to_path(), class: "btn btn-success text-light"
+= link_to "OXT >> Adatbázis generálás + ZIP készítés >>", save_to_path(), class: "btn btn-success text-light"
+= link_to "CSV >> Adatbázis generálás + ZIP készítés >>", save_to_csv_path(), class: "btn btn-success text-light"
