--- a/app/views/translater/index.html.slim
+++ b/app/views/translater/index.html.slim
@@ -69,7 +69,7 @@ table class="table table-striped table-dark"
                
             td
                 
-                    - t= reader(trans.trans_id)
+                    - t= reader(trans.id)
                     -if t.present?
                         
                         -t.each do |b|
@@ -81,13 +81,13 @@ table class="table table-striped table-dark"
                                         =User.find(b.users_id).username.capitalize  
                                         br Státusz: #{b.status}
                                         
-                                textarea rows="2" class="form-control" id="trans_#{b.trans_id.strip}"
+                                textarea rows="2" class="form-control" id="trans_#{b.id}"
                                     = b.translate
-                                button id="copy_translate" class="btn btn-outline-light" data-toggle="tooltip" data-placement="top"  name="#{b.trans_id.strip}" title="A szöveget 1:1 ben átmásolja" 
+                                button id="copy_translate" class="btn btn-outline-light" data-toggle="tooltip" data-placement="top"  name="#{b.id}" title="A szöveget 1:1 ben átmásolja" 
                                     i class="far fa-copy" aria-hidden="true"
                                                    
                                 -if b.status = 0
-                                    button id="ok" class="btn btn-success" name="#{b.id}" data-toggle="tooltip" data-placement="top" data-adat="#{b.trans_id}"  title="Elfogadás" 
+                                    button id="ok" class="btn btn-success" name="#{b.id}" data-toggle="tooltip" data-placement="top" data-adat="#{b.id}"  title="Elfogadás" 
                                         i class="fas fa-spell-check" aria-hidden="true"
                                     
             td
