--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,8 +15,13 @@
  *= require_self
  
  */
-
-
+html{
+  background-color: #6c757d;
+}
+body{
+  height: 100%;
+  
+}
 .container{
   background-color: #fff;
 }
