--- a/app/views/projects/_form.html.slim
+++ b/app/views/projects/_form.html.slim
@@ -10,6 +10,6 @@
     = f.label :title
     = f.text_field :title
   .field
-    = f.label :descripion
-    = f.text_area :descripion
-  .actions = f.submit
+    = f.label :description
+    = f.text_area :description
+  .actions = f.submit class: "btn btn-success text-light"
