--- a/app/views/projects/edit.html.slim
+++ b/app/views/projects/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing project
 
 == render 'form'
 
-=> link_to 'Show', @project
+=> link_to 'Show', @project, class: "btn btn-success text-light"
 '|
-=< link_to 'Back', projects_path
+=< link_to 'Back', projects_path, class: "btn btn-success text-light"
 
