--- a/app/views/translater/index.html.slim
+++ b/app/views/translater/index.html.slim
@@ -1,4 +1,10 @@
-h1 Translater#index Last 20 record
+hr
+- if session[:project_id].present?
+    |Kiválasztott project:  
+    = Project.find(session[:project_id]).title
+h2 File szűrő
+= select_tag 'project_id', options_for_select(@project.collect{ |u| [u.title, u.id] })
+
 = link_to 'Töröld', torol_path, class: "btn btn-primary text-light", method: :post
 br
 | Össz adatábzis rekord:  #{@translate_all}
@@ -6,6 +12,7 @@ hr
 | Össz fordításra váró: #{@translate_real_all}
 br
 br
+
 .digg_pagination
    = will_paginate @translater, :container => false  
 table class="table table-striped table-dark"
@@ -29,7 +36,8 @@ table class="table table-striped table-dark"
                         |File id: #{trans.trans_id}
                     .row 
                         |File name:#{trans.file}
-                
+                    .row 
+                        |Fejléc:#{trans.header}
                 
             td 
                 .input-group.mb-3
@@ -49,23 +57,26 @@ table class="table table-striped table-dark"
                         i class="fas fa-font" aria-hidden="true"
                 
                 - if !trans_controll(trans.trans_id).present?
-                    .input-group
-                        .input-group-prepend
-                            span class="input-group-text basic-addon1 bg-success text-light" style="width:100px" Fordítás:
-                        .row
-                            .col-12
-                                textarea rows="2" cols="60" class="form-control" id="new_#{trans.id}"
-                                button id="SAVE_#{trans.id}" class=" mr-2 btn btn-outline-success" name="#{trans.id}" data-toggle="tooltip" data-placement="top"  title="Mentés"
-                                    |  Mentés 
-                                button id="vez" class="btn btn-secondary mr-2" name="#{trans.id}" data-adat="s" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
-                                    | ~S~
-                                button id="vez" class="btn btn-danger mr-2" name="#{trans.id}" data-adat="r" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
-                                    | ~R~
-                                button id="vez" class="btn btn-warning mr-2" name="#{trans.id}" data-adat="y" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
-                                    | ~Y~
-                                button id="vez" class="btn btn-success" name="#{trans.id}" data-adat="g" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
-                                    | ~G~
-                                
+                    -if trans.header != true
+                        .input-group
+                            .input-group-prepend
+                                span class="input-group-text basic-addon1 bg-success text-light" style="width:100px" Fordítás:
+                            .row
+                                .col-12
+                                    textarea rows="2" cols="60" class="form-control" id="new_#{trans.id}"
+                                    button id="SAVE_#{trans.id}" class=" mr-2 btn btn-outline-success" name="#{trans.id}" data-toggle="tooltip" data-placement="top"  title="Mentés"
+                                        |  Mentés 
+                                    button id="vez" class="btn btn-secondary mr-2" name="#{trans.id}" data-adat="s" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
+                                        | ~S~
+                                    button id="vez" class="btn btn-danger mr-2" name="#{trans.id}" data-adat="r" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
+                                        | ~R~
+                                    button id="vez" class="btn btn-warning mr-2" name="#{trans.id}" data-adat="y" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
+                                        | ~Y~
+                                    button id="vez" class="btn btn-success" name="#{trans.id}" data-adat="g" data-toggle="tooltip" data-placement="top" title="Csak a vezérlőket másolja át"
+                                        | ~G~
+                    -else
+                        .bg-success
+                            | Fejléc, nem editálható!
                
             td
                 
